@@ -389,10 +389,6 @@ isIncomplete(con)
   rare so \code{"UCS-2LE"} is an appropriate first choice (as it is more
   widely implemented).
 
-  One caveat:  \R's implementation of \code{"UCS-2LE"} and similar for
-  output does not currently work on Windows, and on Unix it will default
-  to Unix-style line endings.  We recommend use of \code{UTF-8} instead.
-
   As from \R 3.0.0 the encoding \code{"UTF-8-BOM"} is accepted for
   reading and will remove a Byte Order Mark if present (which it often
   is for files and webpages generated by Microsoft applications).  If a
